Number box fix (#542)
* improve datebox set pattern, so a pattern change will be pushed to input element value.
also update the private setStringValue method, it only updates the input value.

* improve check box set label by removing local label variable, otherwise set label again does not have any ui effect.

* update number box

* NumberBox key press check takes care of the supplied pattern now.

* remove unused imports.

* revert deprecated change