@@ -16,7 +16,6 @@
 package org.dominokit.domino.ui.forms;
 
 import elemental2.core.JsNumber;
-import org.dominokit.domino.ui.utils.ElementUtil;
 
 /** A component that has an input to take/provide float value */
 public class FloatBox extends NumberBox<FloatBox, Float> {
@@ -43,7 +42,6 @@ public class FloatBox extends NumberBox<FloatBox, Float> {
    */
   public FloatBox(String label) {
     super(label);
-    ElementUtil.decimalOnly(this);
   }
 
   /** {@inheritDoc} */
@@ -55,13 +53,13 @@ public class FloatBox extends NumberBox<FloatBox, Float> {
   /** {@inheritDoc} */
   @Override
   protected Float parseValue(String value) {
-    double dValue = getNumberFormat().parse(value);
-    double maxFloat = new Double(getMaxValue());
+    return Double.valueOf(parseDouble(value)).floatValue();
+  }
 
-    if (dValue > maxFloat) {
-      throw new NumberFormatException("Exceeded maximum value");
-    }
-    return new Double(dValue).floatValue();
+  /** {@inheritDoc} */
+  @Override
+  protected boolean hasDecimalSeparator() {
+    return true;
   }
 
   /** {@inheritDoc} */
